<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.sesehat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_olahpesan"
        android:name="id.sesehat.ui.olahpesan.OlahpesanFragment"
        android:label="@string/title_olahpesan"
        tools:layout="@layout/fragment_olahpesan" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="id.sesehat.ui.more.MoreFragment"
        android:label="@string/title_more"
        />
</navigation>