<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_feed_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/home_feed_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/home_feed_header_thumbnail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_account_circle_black_48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_feed_header_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:firstBaselineToTopHeight="34dp"
                    android:text="@string/lorem_author_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/home_feed_header_scope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_post_scope"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:visibility="visible" />
            </LinearLayout>

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="TODO more"
                android:src="@drawable/ic_more_vert_deep_purple_50_dark_24dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_feed_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/home_feed_item_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:firstBaselineToTopHeight="24dp"
                android:lastBaselineToBottomHeight="11dp"
                android:text="@string/lorem_paragraph_short"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="TODO more"
                android:src="@drawable/baseline_thumb_up_deep_purple_50_dark_24dp" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="TODO more"
                android:src="@drawable/baseline_comment_deep_purple_50_dark_24dp" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="TODO more"
                android:src="@drawable/baseline_share_deep_purple_50_dark_24dp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lastBaselineToBottomHeight="16dp"
            android:text="@string/lorem_post_impression"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>